Removed social-sidebar on small displays (< 425px) Fixed positioning of modal

--- a/css/components/_carousel.scss
+++ b/css/components/_carousel.scss
@@ -17,7 +17,7 @@
 
   .modal{
     display: grid;
-    position: absolute;
+    position: fixed;
     justify-self: center;
     grid-template-columns: 2fr 1fr;
     grid-gap: 10px;
@@ -26,8 +26,10 @@
     padding: 20px;
     width: 90vw;
     height: 80vh;
-    top: 0;
+    top: 75px;
+    left: 25px;
     background-color: rgba(0,0,0,0.85);
+
 
     .image{
       max-width: 90%;
@@ -39,12 +41,20 @@
       font-size: 2.0rem;
       text-align: left;
 
+      @media(max-width: 425px){
+        font-size: 1.5rem;
+      }
+
       p{
         margin: 20px 0;
       }
       .title{
         text-align: center;
         font-size: 3rem;
+
+        @media(max-width: 425px){
+          font-size: 2rem;
+        }
       }
 
       .links{
@@ -191,5 +201,10 @@
   #project-carousel{
     grid-template-columns: 1fr;
     margin: 50px 0;
+    .modal{
+      .image{
+        max-width: 70%;
+      }
+    }
   }
 }
